Implement changes to unpick v3 (no new tests yet), update Java to 17